Scroll events with Scrollama

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:title" content="Timeline of Coup D'état (and other political events) in Thailand" />
   <meta property="og:type" content="article" />
   <meta property="og:image" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/thumbnail.png" />
-  <meta property="og:url" content="http://puripant.ruchikachorn.com/responsive-timeline-coup//" />
+  <meta property="og:url" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/" />
   <meta property="og:description" content="้" />
 
   <!-- for Twitter -->
@@ -21,7 +21,7 @@
   <meta name="twitter:description" content="" />
   <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/thumbnail.png" />
 
-  <title>Timeline of Coup D'état (and other political events) in Thailand</title>
+  <title>Election?</title>
   <link href="https://fonts.googleapis.com/css?family=Athiti:300,400,500,600,700&amp;subset=thai" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -30,14 +30,15 @@
   <section class="intro">
     <div class="container">
       <div class="logo boonmeelab float"></div>
-      <h1 class="highlight bold">ไทม์ไลน์</h1>
-      <h1 class="tight bold">รัฐประหารไทย</h1>
-      <h4>Coup Timeline</h4>
+      <h1 class="highlight tight bold">อีกนานแค่ไหน</h1>
+      <h1 class="highlight tight bold">กว่าคนไทย</h1>
+      <h1 class="highlight tight bold">จะได้เลือกตั้ง</h1>
+      <h4>เราจะทำตามสัญญา ขอเวลาอีกไม่นาน</h4>
     </div>
   </section>
 
   <section class="timeline">
-    <ul>
+    <ul class="scrolling">
       <!-- <li>
         <div>
           <div class="time">2011</div> Facebook Video
@@ -55,6 +56,8 @@
         </div>
       </li> -->
     </ul>
+    <div class="fixed"><h1>👇</h1></div>
+    <div class="bottom"><h1>📮</h1></div>
   </section>
 
   <section class="article">
@@ -70,6 +73,9 @@
 
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+<script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
+<script src="https://unpkg.com/scrollama"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="data.js"></script>
 <script src="timeline.js"></script>
 
