Scroll with ScrollMagic

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script>
-<script src="https://unpkg.com/scrollama"></script>
+<!-- <script src="https://unpkg.com/scrollama"></script> -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="data.js"></script>
 <script src="timeline.js"></script>
