Add dynamic content Add Noto Sans webfont

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/thumbnail.png" />
 
   <title>Election?</title>
-  <link href="https://fonts.googleapis.com/css?family=Athiti:300,400,500,600,700&amp;subset=thai" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet"> -->
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,10 +31,8 @@
     <div class="container">
       <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
       <!-- <div class="logo boonmeelab float"></div> -->
-      <h1 class="tight bold centered top-space">อีกนานแค่ไหน</h1>
-      <h1 class="tight bold centered">กว่าคนไทย</h1>
-      <h1 class="tight bold centered">จะได้เลือกตั้ง</h1>
-      <h2 class="top-space" style="padding-left: 50px;">เราจะทำตามสัญญา ขอเวลาอีกไม่นาน</h4>
+      <h1 class="centered top-space">อีกนานแค่ไหน<br />กว่าคนไทย<br />จะได้เลือกตั้ง</h1>
+      <h2 class="top-space" style="margin-left: 60px;">เราจะทำตามสัญญา ขอเวลาอีกไม่นาน</h4>
       <h4 class="highlight right-aligned top-space"><a href="#conclusion">ข้ามไปบทสรุป</a></h4>
     </div>
   </section>
@@ -58,8 +56,6 @@
         </div>
       </li> -->
     </ul>
-    <div class="fixed"><h1>👇</h1></div>
-    <div class="bottom"><h1>📮</h1></div>
   </section>
 
   <section class="article" id="conclusion">
@@ -72,6 +68,19 @@
       <div class="logo boonmeelab"></div>
     </div>
   </section>
+
+  <div class="fixed" style="top: 270px; margin-left: -140px;"><h1>👇</h1></div>
+  <div class="fixed" style="top: 320px; margin-left: -140px;"><h1>📮</h1></div>
+  <div class="fixed" style="bottom: 30px; margin-left: -85px;">
+    <h4>กำหนดการ</h4>
+    <h3 id="election_date">ไม่ปรากฏ</h3>
+  </div>
+  <div class="fixed" style="bottom: 20px; margin-left: 80px;">
+    <div class="circle" style="width: 50px; height: 50px;">
+      <h4>รอวันที่</h4>
+      <h2 id="counter">1234</h2>
+    </div>
+  </div>
 
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
