Update metadata Create font fallback to Noto Sans

--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- for Google -->
-  <meta name="description" content="้" />
+  <meta name="description" content="เราจะทำตามสัญญา ขอเวลาอีกไม่นาน" />
   <meta name="keywords" content="ไทม์ไลน์, รัฐประหาร, coup, timeline, visualization, infographic, interactive, data journalism" />
   <meta name="author" content="Boonmee Lab" />
 
   <!-- for Facebook -->
-  <meta property="og:title" content="Timeline of Coup D'état (and other political events) in Thailand" />
+  <meta property="og:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/thumbnail.png" />
-  <meta property="og:url" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/" />
+  <meta property="og:image" content="http://puripant.ruchikachorn.com/responsive-timeline-election/thumbnail.png" />
+  <meta property="og:url" content="http://puripant.ruchikachorn.com/responsive-timeline-election/" />
   <meta property="og:description" content="้" />
 
   <!-- for Twitter -->
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:title" content="Timeline of Coup D'état (and other political events) in Thailand" />
+  <meta name="twitter:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
   <meta name="twitter:description" content="" />
-  <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-coup/thumbnail.png" />
+  <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-election/thumbnail.png" />
 
-  <title>Election?</title>
-  <!-- <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet"> -->
+  <title>อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง</title>
+  <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
