Animate 3 background colors

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
   <div class="fixed" style="top: 270px; margin-left: -140px;"><h1>👇</h1></div>
   <div class="fixed" style="top: 320px; margin-left: -140px;"><h1>📮</h1></div>
-  <div class="fixed" style="bottom: 30px; margin-left: -85px;">
+  <div class="fixed" style="bottom: 30px; margin-left: -85px;" id="election_date">
     <h4>กำหนดการ</h4>
-    <h3 id="election_date">ไม่ปรากฏ</h3>
+    <h3>ไม่ปรากฏ</h3>
   </div>
-  <div class="fixed" style="bottom: 20px; margin-left: 80px;">
+  <div class="fixed" style="bottom: 20px; margin-left: 80px;" id="counter">
     <div class="circle" style="width: 50px; height: 50px;">
       <h4>รอวันที่</h4>
-      <h2 id="counter">1234</h2>
+      <h2>1234</h2>
     </div>
   </div>
 
