--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-election/thumbnail.png" />
 
   <title>อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง</title>
-  <link href="//fonts.googleapis.com/css?family=Noto+Sans:400,700" rel="stylesheet">
+  <link href="//fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Noto+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
