--- a/index.html
+++ b/index.html
@@ -38,44 +38,27 @@
   </section>
 
   <section class="timeline">
-    <ul class="scrolling">
-      <!-- <li>
-        <div>
-          <div class="time">2011</div> Facebook Video
-          <div class="video-wrapper">
-            <iframe src="https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Fthestandardth%2Fvideos%2F1726460287646856%2F&show_text=0&width=560" width="560" height="315" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allowFullScreen="true"></iframe>
-          </div>
-        </div>
-      </li> -->
-      <!-- <li>
-        <div>
-          <div class="time">2012</div> Twitter
-          <div class="image-wrapper">
-            <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">One of the most beautiful things <a href="https://twitter.com/NANGmagazine">@NANGmagazine</a> People, check it out. Affordable collectible portable... <a href="https://t.co/SmTk3oRsBH">pic.twitter.com/SmTk3oRsBH</a></p>&mdash; Apichatpong W. (@kickthemachine) <a href="https://twitter.com/kickthemachine/status/870102867561992192">June 1, 2017</a></blockquote>
-          </div>
-        </div>
-      </li> -->
-    </ul>
+    <ul class="scrolling"></ul>
   </section>
 
   <section class="article" id="conclusion">
-    <div class="container">
-      <h1>บทสรุป</h1>
+    <div class="container centered">
+      <!-- <h1>บทสรุป</h1>
       <h2>โจทย์ท้าทายใหม่ของไทย</h1>
       <p>…</p>
-      <p>&nbsp;</p>
+      <p>&nbsp;</p> -->
       <div>สร้างสรรค์โดย</div>
       <div class="logo boonmeelab"></div>
     </div>
   </section>
 
-  <div class="fixed" style="top: 270px; margin-left: -140px;"><h1>👇</h1></div>
-  <div class="fixed" style="top: 320px; margin-left: -140px;"><h1>📮</h1></div>
-  <div class="fixed" style="bottom: 30px; margin-left: -85px;" id="election_date">
+  <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
+  <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
+  <div class="fixed" id="election-date" style="bottom: 30px; margin-left: -85px;">
     <h4>กำหนดการ</h4>
     <h3 class="text"></h3>
   </div>
-  <div class="fixed" style="bottom: 20px; margin-left: 80px;" id="counter">
+  <div class="fixed" id="counter" style="bottom: 20px; margin-left: 80px;">
     <div class="circle" style="width: 50px; height: 50px;">
       <h4>รอวันที่</h4>
       <h2 class="text"></h2>
@@ -84,12 +67,9 @@
 
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-<!-- <script src="https://polyfill.io/v2/polyfill.min.js?features=IntersectionObserver"></script> -->
-<!-- <script src="https://unpkg.com/scrollama"></script> -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<!-- <script src="data.js"></script> -->
 <script src="timeline.js"></script>
 
 </body>
