--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
   <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
   <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
-  <div class="fixed" id="election-date" style="bottom: 30px; margin-left: -85px;">
+  <div class="fixed status" id="election-date" style="bottom: 30px; margin-left: -85px;">
     <h4>กำหนดการ</h4>
     <h3 class="text"></h3>
   </div>
-  <div class="fixed" id="counter" style="bottom: 20px; margin-left: 80px;">
+  <div class="fixed status" id="counter" style="bottom: 20px; margin-left: 80px;">
     <div class="circle" style="width: 50px; height: 50px;">
       <h4>รอวันที่</h4>
       <h2 class="text"></h2>
@@ -69,7 +69,8 @@
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-<script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="//d3js.org/d3.v4.min.js"></script>
+<!-- <script src="//cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script> -->
 <script src="timeline.js"></script>
 
 </body>
