Add dashed timeline

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </div>
   </section>
 
+  <svg class="fixed mini-timeline"></svg>
   <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
   <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
   <div class="fixed status" id="election-date" style="bottom: 30px; margin-left: -85px;">
