Center date & text Move counter to top Add a line before expected date

--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
   <svg class="fixed mini-timeline"></svg>
   <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
   <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
-  <div class="fixed status" id="election-date" style="bottom: 30px; margin-left: -85px;">
-    <h4>กำหนดการ</h4>
-    <h3 class="text"></h3>
+  <div class="fixed status" id="election-date">
+    <h4>กำหนดการ</h4><h3 class="text"></h3>
   </div>
-  <div class="fixed status" id="counter" style="bottom: 20px; margin-left: 80px;">
+  <div class="fixed status" id="counter" style="top: 20px; margin-left: 100px;">
     <div class="circle" style="width: 50px; height: 50px;">
       <h4>รอวันที่</h4>
       <h2 class="text"></h2>
