--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <section class="intro">
+  <section class="intro fixed">
     <div class="container">
       <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
       <!-- <div class="logo boonmeelab float"></div> -->
