Add status text animation Slightly edit data to fit in the space

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
   <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
   <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
   <div class="fixed status" id="election-date">
+    <div class="section-line"></div>
     <h4>กำหนดการ</h4><h3 class="text"></h3>
   </div>
   <div class="fixed status" id="counter" style="top: 20px; margin-left: 100px;">
