--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
       <!-- <div class="logo boonmeelab float"></div> -->
       <h1 class="centered top-space">อีกนานแค่ไหน<br />กว่าคนไทย<br />จะได้เลือกตั้ง</h1>
-      <h2 class="top-space" style="margin-left: 60px;">เราจะทำตามสัญญา ขอเวลาอีกไม่นาน</h4>
+      <h2 class="top-space" style="margin-left: 60px;">เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา</h4>
       <h4 class="highlight right-aligned top-space"><a href="#conclusion">ข้ามไปบทสรุป</a></h4>
     </div>
   </section>
