add wait animations

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p>…</p>
       <p>&nbsp;</p> -->
       <div>สร้างสรรค์โดย</div>
-      <div class="logo boonmeelab"></div>
+      <!-- <div class="logo boonmeelab"></div> -->
     </div>
   </section>
 
