Add timeline icons

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
   </section>
 
   <svg class="fixed mini-timeline"></svg>
-  <div class="fixed mini-timeline" id="hand"><h1>👇</h1></div>
-  <div class="fixed mini-timeline" id="box"><h1>📮</h1></div>
+  <div class="fixed mini-timeline timeline-icon" id="hand"></div>
+  <div class="fixed mini-timeline timeline-icon" id="box"></div>
   <div class="fixed status" id="election-date">
     <div class="section-line"></div>
     <h4>กำหนดการ</h4><h3 class="text"></h3>
