Fix links in the intro Remove debug indicators Slightly edit data

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script async defer src="//platform.instagram.com/en_US/embeds.js"></script>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
+<!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script> -->
 <script src="//d3js.org/d3.v4.min.js"></script>
 <!-- <script src="//cdn.jsdelivr.net/npm/lodash@4.17.10/lodash.min.js"></script> -->
 <script src="timeline.js"></script>
