Draft of conclusion section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h2>โจทย์ท้าทายใหม่ของไทย</h1>
       <p>…</p>
       <p>&nbsp;</p> -->
-      <div>สร้างสรรค์โดย</div>
+      <!-- <div>สร้างสรรค์โดย</div> -->
       <!-- <div class="logo boonmeelab"></div> -->
     </div>
   </section>
