Fix interaction bugs such as link clicking. Add back-to-top link. Position conclusion timeline and markers (hand & box).

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-  <section class="intro fixed">
+  <section id="intro" class="fixed">
     <div class="container">
       <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
       <!-- <div class="logo boonmeelab float"></div> -->
@@ -41,8 +41,9 @@
     <ul class="scrolling"></ul>
   </section>
 
-  <section class="article" id="conclusion">
-    <div class="container centered">
+  <section id="conclusion" class="article">
+    <div class="container">
+      <h4 class="right-aligned"><a href="#top">ย้อนไปข้างบน</a></h4>
       <!-- <h1>บทสรุป</h1>
       <h2>โจทย์ท้าทายใหม่ของไทย</h1>
       <p>…</p>
