fix wait cartoon animations in position

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <div class="section-line"></div>
     <h4>กำหนดการ</h4><h3 class="text"></h3>
   </div>
-  <div class="fixed status" id="counter" style="top: 20px; margin-left: 100px;">
-    <div class="circle" style="width: 50px; height: 50px;">
-      <h4>รอวันที่</h4>
-      <h2 class="text"></h2>
+  <div class="fixed status" id="counter">
+    <div class="circle">
+      <h2>รอวันที่</h2>
+      <h1 class="text"></h1>
     </div>
   </div>
 
