Update timeline data Update images Add webfonts

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <div class="circle">
           <h3 class="text">THAI</h3>
           <h3 class="text">ELECTION</h3>
-          <h3 class="text" style="font-style: italic;">Timeline</h3>
+          <h3 class="text" style="font-style: italic; font-weight: normal;">Timeline</h3>
         </div>
       </div>
       <div class="stats">
         <ul>
           <li>
-            <h3 class="text">คนไทยรอเลือกตั้งมาแล้ว</h3>
+            <h3 class="text">คนไทยรอเลือกตั้งมา</h3>
             <h1 class="num"></h1>
             <h4 class="unit">วัน</h4>
           </li>
