--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -27,6 +27,15 @@
 </head>
 
 <body>
+  <div id="fb-root"></div>
+  <script>(function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v3.2&appId=171048360504115&autoLogAppEvents=1';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
   <section id="intro" class="fixed">
     <div class="container">
       <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
@@ -70,6 +79,9 @@
           </li>
         <ul>
       </div>
+    </div>
+    <div class="share-buttons">
+      <div class="fb-share-button" data-href="http://elect.in.th/election-timeline" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Felect.in.th%2Felection-timeline&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
   </section>
 
