Make wait animation suddenly appear/disappear instead of fading in/out. Edit metadata for social media.

--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -6,20 +6,20 @@
   <!-- for Google -->
   <meta name="description" content="เราจะทำตามสัญญา ขอเวลาอีกไม่นาน" />
   <meta name="keywords" content="ไทม์ไลน์, รัฐประหาร, coup, timeline, visualization, infographic, interactive, data journalism" />
-  <meta name="author" content="Boonmee Lab" />
+  <meta name="author" content="Elect" />
 
   <!-- for Facebook -->
   <meta property="og:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="http://puripant.ruchikachorn.com/responsive-timeline-election/thumbnail.png" />
-  <meta property="og:url" content="http://puripant.ruchikachorn.com/responsive-timeline-election/" />
-  <meta property="og:description" content="้" />
+  <meta property="og:image" content="http://elect.in.th/election-timeline/thumbnail.png" />
+  <meta property="og:url" content="http://elect.in.th/election-timeline/" />
+  <meta property="og:description" content="เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา" />
 
   <!-- for Twitter -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
-  <meta name="twitter:description" content="" />
-  <meta name="twitter:image" content="http://puripant.ruchikachorn.com/responsive-timeline-election/thumbnail.png" />
+  <meta name="twitter:description" content="เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา" />
+  <meta name="twitter:image" content="http://elect.in.th/election-timeline/thumbnail.png" />
 
   <title>อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง</title>
   <link href="//fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Noto+Sans:400,700" rel="stylesheet">
