--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -38,7 +38,7 @@
 
   <section id="intro" class="fixed">
     <div class="container">
-      <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4>
+      <!-- <h4 class="right-aligned">ภาษาไทย | <a href="">English</a></h4> -->
       <!-- <div class="logo boonmeelab float"></div> -->
       <h1 class="centered top-space">อีกนานแค่ไหน<br />กว่าคนไทย<br />จะได้เลือกตั้ง</h1>
       <h2 class="top-space" style="margin-left: 60px;">เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา</h4>
