election-timeline: add arrow to intro, change social media thumbnail

--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -43,6 +43,7 @@
       <h1 class="centered top-space">อีกนานแค่ไหน<br />กว่าคนไทย<br />จะได้เลือกตั้ง</h1>
       <h2 class="top-space" style="margin-left: 60px;">เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา</h4>
       <h4 class="highlight right-aligned top-space"><a href="#conclusion">ข้ามไปบทสรุป</a></h4>
+      <div class="top-space arrow"></div>
     </div>
   </section>
 
