--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -133,7 +133,7 @@
         <a class="share-line"><i class="fab fa-line fa-fw"></i></a>
       </div>
     </div>
-    <div class="download"><a target="_blank" href="images/conclusion.png">ดาว์นโหลดบทสรุปนี้เป็นภาพ</a></div>
+    <div class="download"><a target="_blank" href="images/conclusion.png">ดาวน์โหลดบทสรุปนี้เป็นภาพ</a></div>
     <!-- <div class="share-buttons">
       <div class="fb-share-button" data-href="http://elect.in.th/election-timeline" data-layout="button" data-size="large" data-mobile-iframe="true"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Felect.in.th%2Felection-timeline&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
     </div> -->
