add google analytics, add fb:app_id meta, change url to https, add social links to header

--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -9,17 +9,18 @@
   <meta name="author" content="Elect" />
 
   <!-- for Facebook -->
+  <meta property="fb:app_id" content="171048360504115" />
   <meta property="og:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
   <meta property="og:type" content="article" />
-  <meta property="og:image" content="http://elect.in.th/election-timeline/thumbnail.png" />
-  <meta property="og:url" content="http://elect.in.th/election-timeline/" />
+  <meta property="og:image" content="https://elect.in.th/election-timeline/thumbnail.png" />
+  <meta property="og:url" content="https://elect.in.th/election-timeline/" />
   <meta property="og:description" content="เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา" />
 
   <!-- for Twitter -->
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง" />
   <meta name="twitter:description" content="เดี๋ยวเลือก เดี๋ยวเลื่อน ผ่านมากี่เดือนกี่ปีแล้ว? แม้จะมีถ้อยคำสัญญาออกมาให้หวังอยู่เรื่อยๆ แต่ดูเหมือนว่าการเลือกตั้งของไทยก็ยังไม่เคยมาถึงเสียที ลองมาไล่เรียงกันดูว่าอะไรที่ทำให้คนไทยต้องรอการเลือกตั้งนานนักหนา" />
-  <meta name="twitter:image" content="http://elect.in.th/election-timeline/thumbnail.png" />
+  <meta name="twitter:image" content="https://elect.in.th/election-timeline/thumbnail.png" />
 
   <title>อีกนานแค่ไหนกว่าคนไทยจะได้เลือกตั้ง - ELECT.IN.TH</title>
   <link href="//fonts.googleapis.com/css?family=Libre+Baskerville|Noto+Sans" rel="stylesheet">
@@ -30,6 +31,17 @@
   <link rel="stylesheet" href="sharer.css">
 
   <link rel="stylesheet" href="style.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-129270906-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-129270906-1');
+  </script>
+
 </head>
 
 <body>
@@ -68,13 +80,12 @@
       </a>
       <div class="ml-auto d-flex navbar-more">
         <div class="lang">
-          <a class="active">ภาษาไทย</a>
-          <a>English</a>
+          <!-- <a class="active">ภาษาไทย</a>
+          <a>English</a> -->
         </div>
         <div class="social">
-          <a><i class="fab fa-facebook-f fa-fw"></i></a>
-          <a><i class="fab fa-twitter fa-fw"></i></a>
-          <a><i class="fab fa-instagram fa-fw"></i></a>
+          <a href="https://www.facebook.com/electinthai"><i class="fab fa-facebook-f fa-fw"></i></a>
+          <a href="https://twitter.com/electinthai"><i class="fab fa-twitter fa-fw"></i></a>
         </div>
       </div>
     </nav>
