add link to header logo

--- a/election-timeline/index.html
+++ b/election-timeline/index.html
@@ -74,7 +74,7 @@
 
   <header class="site-header">
     <nav class="navbar navbar-light">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="images/site-logo.png">
         <h6>In Vote We Trust</h6>
       </a>
